fix: fixed page title text-align

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -185,7 +185,7 @@
 
 .notion-title {
   display: block;
-  text-align: center;
+  text-align: left;
 }
 
 .notion-collection-row {
